sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:4: error: ';' expected but double literal found.
  var ecart:Double=n.0
                    ^