sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var n:Int=getNombreValeurs
  var ecart:Double=n.0
  if (ecart>1) {
    ecart = ecart/1.3
  }
  var i:Int=0
  while (i+ecart<n){
    if (!plusPetit(i,i+ecart)){
      echange(i,i+ecart)
    }
    i=i+1
  }
}